array and strings tests

--- a/platzitest/package.json
+++ b/platzitest/package.json
@@ -11,6 +11,7 @@
     "jest": "^23.6.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   }
 }
