--- a/platzitest/package.json
+++ b/platzitest/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watchAll"
   }
 }
