callbacks promises and snapshots tests

--- a/platzitest/package.json
+++ b/platzitest/package.json
@@ -14,5 +14,8 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watchAll"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
